--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
+    "typedoc": "^0.28.14",
     "typescript": "^5"
   }
 }
